Integrate all components together and solve layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,5 @@
+@import './normalize.css';
+
 :root {
   --color-primary: #2584ff;
   --color-secondary: #00d9ff;
@@ -29,11 +31,12 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   font-family: 'Inter', Arial, Helvetica, sans-serif;
-  font-size: 2.4rem;
+  font-size: 2rem;
   line-height: 1.5;
   color: var(--color-body);
 }
@@ -47,7 +50,7 @@ h3 {
 }
 
 h1 {
-  font-size: 7rem;
+  font-size: 6rem;
 }
 
 h2 {
@@ -55,8 +58,9 @@ h2 {
 }
 
 h3 {
-  font-size: 3rem;
-  font-weight: 500;
+  font-size: 2.8rem;
+  font-weight: 600;
+  line-height: 1.3;
 }
 
 p {
@@ -221,7 +225,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -309,6 +313,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -334,7 +339,7 @@ a {
 
 .card__header,
 .card__body {
-  padding: 1rem 2rem;
+  padding: 2rem 7%;
 }
 
 .card--primary .card__header {
@@ -360,11 +365,11 @@ a {
 }
 
 .plan__price {
-  font-size: 6rem;
+  font-size: 5rem;
 }
 
 .plan__billing-cycle {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 300;
   margin-right: 1rem;
   opacity: 0.8;
@@ -382,10 +387,6 @@ a {
   margin-bottom: 2rem;
 }
 
-.plan--popular {
-  transform: scale(1.1);
-}
-
 .plan--popular .card__header {
   position: relative;
 }
@@ -396,7 +397,7 @@ a {
   position: absolute;
   right: 5%;
   top: -6px;
-  width: 40px;
+  width: 35px;
 }
 
 .plan:hover {
@@ -408,6 +409,10 @@ a {
 }
 
 @media screen and (min-width: 1024px) {
+  .plan--popular {
+    transform: scale(1.1);
+  }
+
   .plan__name {
     font-size: 1.4rem;
   }
@@ -432,7 +437,7 @@ a {
 }
 
 .media__title {
-  margin: 0;
+  margin-top: 0;
 }
 
 .media__image {
@@ -460,14 +465,14 @@ a {
 }
 
 .quote__author {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 500;
   font-style: normal;
   margin-bottom: 0;
 }
 
 .quote__organization {
-  font-size: 2rem;
+  font-size: 1.5rem;
   color: var(--color-headings);
   opacity: 0.4;
   font-style: normal;
@@ -516,6 +521,7 @@ a {
 
 .testimonial__image {
   position: relative;
+  margin: 0 3rem;
 }
 
 .testimonial__image > img {
@@ -529,20 +535,19 @@ a {
 }
 
 .testimonial .quote {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin: 2rem 0;
+  font-size: 110%;
 }
 
 @media screen and (min-width: 768px) {
-  .testimonial .quote,
-  .testimonial .testimonial__author {
-    font-size: 2.4rem;
+  .testimonial__image {
+    margin: 0;
   }
 
   .testimonial .quote {
-    margin-left: 6rem;
-    margin-right: 0;
+    margin: 5rem 0 0 6rem;
+    font-size: 120%;
+    line-height: 1.5;
   }
 }
 
@@ -615,14 +620,14 @@ a {
 }
 
 .collapsible--expanded .collapsible__content {
-  max-height: 100vh;
+  max-height: 100%;
   opacity: 1;
 }
 
 /* Blocks */
 .block {
-  --padding-vertical: 6rem;
-  padding: var(--padding-vertical);
+  --padding-vertical: 5rem;
+  padding: var(--padding-vertical) 2rem;
 }
 
 .block__header {
@@ -646,12 +651,12 @@ a {
 }
 
 .block--skewed-right {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 95%);
   padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
 .block--skewed-left {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
+  clip-path: polygon(0% 0%, 100% 0%, 100% 95%, 0% 100%);
   padding-bottom: calc(var(--padding-vertical) + 4rem);
 }
 
@@ -673,6 +678,10 @@ a {
 .nav__item {
   padding: 0.5rem 2rem;
   border-bottom: 1px solid #222;
+}
+
+.nav__item:last-of-type {
+  border-bottom: none;
 }
 
 .nav__item > a {
@@ -730,18 +739,16 @@ a {
   width: 100%;
 }
 
-.hero__content > a {
-  display: inline-block;
-}
-
 @media screen and (min-width: 768px) {
-  .hero.block {
-    padding-top: 0;
-  }
-
   .hero__content {
     text-align: left;
     align-self: center;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero.block {
+    padding-top: 0;
   }
 }
 
@@ -754,8 +761,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
@@ -776,7 +784,7 @@ a {
 }
 
 .block-plans .card {
-  max-width: 50rem;
+  max-width: 500px;
   margin: 0 auto;
 }
 
@@ -827,15 +835,16 @@ a {
 /* Footer */
 .footer {
   background-color: #232323;
+  padding-top: 10rem;
 }
 
 .footer a {
   color: #777;
+  transition: color 0.3s;
 }
 
 .footer a:hover {
   color: #fff;
-  transition: color 0.3s;
 }
 
 .footer .list {
@@ -850,6 +859,8 @@ a {
 .footer__heading {
   text-transform: uppercase;
   font-weight: 600;
+  font-size: 2.5rem;
+  line-height: 1.5;
 }
 
 .footer__brand {
@@ -863,18 +874,21 @@ a {
 }
 
 .footer__copyright {
-  font-style: 2.1rem;
+  font-size: 2.1rem;
   color: #fff;
   opacity: 0.3;
 }
 
 @media screen and (min-width: 768px) {
+  .footer {
+    font-size: 1.5rem;
+  }
+
   .footer__sections {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 
   .footer__section {
-    padding: 0 0.8rem;
     border: 0;
   }
 
@@ -899,4 +913,9 @@ a {
   .footer__copyright {
     font-size: 1.5rem;
   }
+}
+
+/* Sign Up Callout */
+.callout-signup {
+  transform: translateY(5rem);
 }
